adding token intent to share clients to fix test issue